# codeslayer.wordcomplete-plugin

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  wordcompletion.codeslayer-plugin.in
.codeslayer/: autotools.conf  ctags.conf
src/: Makefile.am  Makefile.in  wordcompletion-plugin.c  wordcompletion-provider.c  wordcompletion-provider.h
