lib_LTLIBRARIES = libwordcompletioncodeslayerplugin.la

libwordcompletioncodeslayerplugin_la_SOURCES = \
    wordcompletion-provider.h \
    wordcompletion-provider.c \
    wordcompletion-plugin.c

libwordcompletioncodeslayerplugin_la_CPPFLAGS = $(WORDCOMPLETIONCODESLAYERPLUGIN_CFLAGS) -I$(top_srcdir) -I$(srcdir)
